virt01/automated/media/subarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: subarr
  labels:
    app: subarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: subarr
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: subarr-pv
      labels:
        app: subarr
    spec:
      runtimeClassName: nvidia
      serviceAccountName: subarr-sa
      containers:
        - name: subarr
          image: ghcr.io/coaxk/subarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9922
              name: subarr-port
              protocol: TCP
          resources:
            requests:
              cpu: 20m
              memory: 100Mi
          volumeMounts:
            - name: subarr-pv
              mountPath: /data
            - name: tvshows
              mountPath: /media/tv
            - name: movies
              mountPath: /media/movies
      volumes:
        - name: subarr-pv
          persistentVolumeClaim:
            claimName: subarr-pvc
        - name: movies
          hostPath:
            path: /mnt/emby_unified/Movies
            type: Directory
        - name: tvshows
          hostPath:
            path: /mnt/emby_unified/TVShows
            type: Directory
